RESOLVED FIXED171884
[Modern Media Controls] Localized strings aren't loaded
https://bugs.webkit.org/show_bug.cgi?id=171884
Summary [Modern Media Controls] Localized strings aren't loaded
Antoine Quint
Reported 2017-05-09 14:16:00 PDT
Localized strings fail to load.
Attachments
Patch (3.15 KB, patch)
2017-05-09 14:18 PDT, Antoine Quint
no flags
Radar WebKit Bug Importer
Comment 1 2017-05-09 14:16:35 PDT
Antoine Quint
Comment 2 2017-05-09 14:18:25 PDT
WebKit Commit Bot
Comment 3 2017-05-09 14:52:56 PDT
Comment on attachment 309538 [details] Patch Clearing flags on attachment: 309538 Committed r216544: <http://trac.webkit.org/changeset/216544>
WebKit Commit Bot
Comment 4 2017-05-09 14:52:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.