[Modern Media Controls] Localized strings aren't loaded https://bugs.webkit.org/show_bug.cgi?id=171884

Patch by Antoine Quint <graouts@apple.com> on 2017-05-09
Reviewed by Dean Jackson.

Remove the extraneous file extension in the file name.

* rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::mediaControlsScript):
* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::mediaControlsScript):

Canonical link: https://commits.webkit.org/188802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216544 268f45cc-cd09-0410-ab3c-d52691b4dbfc